# arxiv-scholar

./: .gitignore  README.md  architecture.md  docker-compose.yml  main.py  pyproject.toml  trial.py
configs/: config.py
data/: eval_dataset.jsonl
docs/: index.html
for_AI/: context.md
notebooks/: benchmark_colab.ipynb  e2e_pipeline_test.ipynb  embedding_test.ipynb  layout_chunking_demo.ipynb
scripts/: download_qdrant.sh  generate_eval_dataset.py  run_benchmarks.py
src/arxiv_scholar/: schema.py
src/arxiv_scholar/api/: schema.py  server.py
src/arxiv_scholar/chunking/: __init__.py  base.py  layout.py  sliding_window.py
src/arxiv_scholar/download/: arxiv_ingestion.py
src/arxiv_scholar/embedding/: __init__.py  base.py  fastembed_embedder.py  st_embedder.py
src/arxiv_scholar/ingestion/: base.py  gcs.py  local.py
src/arxiv_scholar/llm/: service.py
src/arxiv_scholar/retrieval/: orchestrator.py  retrieval.py  router.py
src/arxiv_scholar/storage/: __init__.py  base.py  qdrant_store.py
tests/: test_embedding.py  test_ingestion.py  test_storage.py
