[project]
name = "arxiv-scholar"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=4.0.0",
    "docling>=2.95.0",
    "fastapi>=0.136.3",
    "fastembed>=0.2.6",
    "google-cloud-storage>=2.15.0",
    "ipykernel>=7.2.0",
    "openai>=2.38.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=4.0.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
